# GraphRec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb
backend/: requirements-ml.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: interactions.py  metrics.py  recommend.py
backend/app/core/: recommender.py  redis_client.py
backend/app/db/: crud.py  models.py  session.py
backend/app/ml/: data_loader.py  eval_coldstart.py  feature_engineering.py  graphsage_model.py  graphsage_serving.py  graphsage_store.py  movielens_dataset.py  plot_results.py  tmdb_dataset.py  train_cli.py  train_dataset.py  train_movielens_cli.py  training.py
backend/app/utils/: redis.py
cpp_engine/: CMakeLists.txt
cpp_engine/include/: RecommendationEngine.h
cpp_engine/src/: RecommendationEngine.cpp  bindings.cpp
docs/: algorithms.md  architechture.md  complexity.md
frontend/: index.html  login.html  recommendations.html
frontend/css/: styles.css
frontend/js/: app.js
sql/: schema.sql
tests/api/: test_endpoints.py
tests/cpp/: test_recommender.cpp
